force-app/main/default/objects/Email_Gateway_Log__c/Email_Gateway_Log__c.object-meta.xml
<CustomObject>
    <label>Email Gateway Log</label>
    <nameField>
        <displayFormat>EGL-{0000000}</displayFormat>
        <label>Email Gateway Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Gateway Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>