force-app/main/default/objects/Email_Gateway_Log__c/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <description>The emailType passed to CARAEmailGatewayService, e.g. ORDER_CONFIRMATION.</description>
    <label>Email Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>