force-app/main/default/objects/Email_Gateway_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Controlled error detail only. Never populated with access tokens, client secrets, passwords, or password-reset tokens/URLs.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>