force-app/main/default/objects/Email_Gateway_Log__c/fields/HTTP_Status__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Status__c</fullName>
    <description>HTTP status code returned by the Marketing Cloud callout, if one was made.</description>
    <label>HTTP Status</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>