force-app/main/default/objects/Email_Gateway_Log__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>emailType + &apos;:&apos; + (requestId or relatedRecordId or recipient email). Unique external id — CARAEmailGatewayService upserts on this so a retried/duplicate business event never sends the same email twice.</description>
    <externalId>true</externalId>
    <label>Idempotency Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>