force-app/main/default/objects/Email_Gateway_Log__c/fields/Individual_Id__c.field-meta.xml
<CustomField>
    <fullName>Individual_Id__c</fullName>
    <description>Contact.Id resolved as the Marketing Cloud individualId for this send. Plain text (not a lookup) so a resolution miss still logs. Blank when no Contact could be resolved and the send fell back to email-only.</description>
    <label>Individual Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>