force-app/main/default/objects/Email_Gateway_Log__c/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <description>Email address the request resolved to send to.</description>
    <label>Recipient Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>