force-app/main/default/objects/Email_Gateway_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Salesforce record Id the send relates to where applicable (Order, Case, etc.). Plain text, not a lookup, since the related object varies by email type.</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>