force-app/main/default/objects/Email_Gateway_Log__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <description>Correlation id returned to the caller (SFCC or internal) for this request.</description>
    <label>Request Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>