force-app/main/default/objects/Email_Gateway_Log__c/fields/Send_Definition_Id__c.field-meta.xml
<CustomField>
    <fullName>Send_Definition_Id__c</fullName>
    <description>Marketing Cloud sendDefinitionId used for this send, copied from Email_Notification_Setting__mdt at send time.</description>
    <label>Send Definition Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>