force-app/main/default/objects/Email_Gateway_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Who initiated the send — SFCC (via CARAEmailGatewayRestService) or ServiceCloud (internal Apex/Flow trigger).</description>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFCC</fullName>
            </value>
            <value>
                <fullName>ServiceCloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>