force-app/main/default/objects/Email_Gateway_Log__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True once Marketing Cloud returned a 2xx for this send.</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>